trino/resources/istio/base/trino-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: trino-gateway
  namespace: $(namespace)
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - "$(TRINO_DOMAINNAME)"
    tls:
      mode: SIMPLE
      credentialName: trino-tls
