trino/resources/istio/base/trino-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: trino-vs
  namespace: $(namespace)
spec:
  gateways:
  - trino-gateway
  hosts:
  - "$TRINO_DOMAINNAME"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Proto: https
    match:
    - uri:
        prefix: /
    name: trino-coordinator-service
    route:
    - destination:
        host: trino-coordinator-service.trino.svc.cluster.local
        port:
          number: 8080
